// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adjust style if modal visible 1`] = `
<section
  className="hard background--light-primary"
  style={
    Object {
      "WebkitFilter": "blur(2px)",
    }
  }
>
  <Meta
    description="Album by artist"
    image="url(http://test.com/medium.blur.jpg)"
  />
  <div
    className="one-whole soft soft-double@palm-wide-and-up overlay floating background--dark-primary background--fill"
    style={
      Object {
        "backgroundImage": "url(http://test.com/xsmall.blur.jpg)",
      }
    }
  >
    <div
      className="one-third floating__item display-inline overlay__item ratio--square background--fill"
      style={
        Object {
          "backgroundImage": "url(http://test.com/medium.blur.jpg)",
        }
      }
    />
    <div
      className="overlay__item soft-left text-left floating__item two-thirds text-light-primary"
    >
      <h5 />
      <h7>
        artist
      </h7>
    </div>
  </div>
  <div
    className="background--light-primary one-whole"
  >
    <div
      className="soft-sides soft-double-sides@palm-wide-and-up soft-ends@palm-wide-and-up soft-half-ends push-bottom"
    >
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={0}
      />
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={1}
      />
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={2}
      />
    </div>
  </div>
</section>
`;

exports[`parses query correctly 1`] = `
Object {
  "definitions": Array [
    Object {
      "directives": Array [],
      "kind": "OperationDefinition",
      "name": Object {
        "kind": "Name",
        "value": "getAlbum",
      },
      "operation": "query",
      "selectionSet": Object {
        "kind": "SelectionSet",
        "selections": Array [
          Object {
            "alias": Object {
              "kind": "Name",
              "value": "content",
            },
            "arguments": Array [
              Object {
                "kind": "Argument",
                "name": Object {
                  "kind": "Name",
                  "value": "id",
                },
                "value": Object {
                  "kind": "Variable",
                  "name": Object {
                    "kind": "Name",
                    "value": "id",
                  },
                },
              },
            ],
            "directives": Array [],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "node",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "id",
                  },
                  "selectionSet": null,
                },
                Object {
                  "directives": Array [],
                  "kind": "InlineFragment",
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "alias": Object {
                          "kind": "Name",
                          "value": "entryId",
                        },
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "id",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "title",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "status",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "channelName",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "meta",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "urlTitle",
                              },
                              "selectionSet": null,
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "siteId",
                              },
                              "selectionSet": null,
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "date",
                              },
                              "selectionSet": null,
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "channelId",
                              },
                              "selectionSet": null,
                            },
                          ],
                        },
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "content",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "tracks",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "title",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "duration",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": Object {
                                      "kind": "Name",
                                      "value": "file",
                                    },
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "s3",
                                    },
                                    "selectionSet": null,
                                  },
                                ],
                              },
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [
                                Object {
                                  "kind": "Argument",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "sizes",
                                  },
                                  "value": Object {
                                    "kind": "ListValue",
                                    "values": Array [
                                      Object {
                                        "kind": "StringValue",
                                        "value": "large",
                                      },
                                      Object {
                                        "kind": "StringValue",
                                        "value": "medium",
                                      },
                                      Object {
                                        "kind": "StringValue",
                                        "value": "small",
                                      },
                                      Object {
                                        "kind": "StringValue",
                                        "value": "xsmall",
                                      },
                                    ],
                                  },
                                },
                              ],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "images",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "fileName",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "fileType",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "fileLabel",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "size",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "url",
                                    },
                                    "selectionSet": null,
                                  },
                                ],
                              },
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "colors",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "value",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "description",
                                    },
                                    "selectionSet": null,
                                  },
                                ],
                              },
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "isLight",
                              },
                              "selectionSet": null,
                            },
                          ],
                        },
                      },
                    ],
                  },
                  "typeCondition": Object {
                    "kind": "NamedType",
                    "name": Object {
                      "kind": "Name",
                      "value": "Content",
                    },
                  },
                },
              ],
            },
          },
        ],
      },
      "variableDefinitions": Array [
        Object {
          "defaultValue": null,
          "kind": "VariableDefinition",
          "type": Object {
            "kind": "NonNullType",
            "type": Object {
              "kind": "NamedType",
              "name": Object {
                "kind": "Name",
                "value": "ID",
              },
            },
          },
          "variable": Object {
            "kind": "Variable",
            "name": Object {
              "kind": "Name",
              "value": "id",
            },
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 659,
    "source": Source {
      "body": "
  query getAlbum($id: ID!) {
    content: node(id: $id) {
      id
      ... on Content {
        entryId: id
        title
        status
        channelName
        meta {
          urlTitle
          siteId
          date
          channelId
        }
        content {
          tracks {
            title
            duration
            file: s3
          }
          images(sizes: [\\"large\\", \\"medium\\", \\"small\\", \\"xsmall\\"]) {
            fileName
            fileType
            fileLabel
            size
            url
          }
          colors {
            value
            description
          }
          isLight
        }
      }
    }
  }
",
      "name": "GraphQL",
    },
    "start": 3,
  },
}
`;

exports[`renders loading if not content 1`] = `
<div
  className="locked-ends locked-sides floating"
>
  <div
    className="floating__item"
  >
    <Loading />
  </div>
</div>
`;

exports[`renders with props 1`] = `
<section
  className="hard background--light-primary"
  style={Object {}}
>
  <Meta
    description="Album by artist"
    image="url(http://test.com/medium.blur.jpg)"
  />
  <div
    className="one-whole soft soft-double@palm-wide-and-up overlay floating background--dark-primary background--fill"
    style={
      Object {
        "backgroundImage": "url(http://test.com/xsmall.blur.jpg)",
      }
    }
  >
    <div
      className="one-third floating__item display-inline overlay__item ratio--square background--fill"
      style={
        Object {
          "backgroundImage": "url(http://test.com/medium.blur.jpg)",
        }
      }
    />
    <div
      className="overlay__item soft-left text-left floating__item two-thirds text-light-primary"
    >
      <h5 />
      <h7>
        artist
      </h7>
    </div>
  </div>
  <div
    className="background--light-primary one-whole"
  >
    <div
      className="soft-sides soft-double-sides@palm-wide-and-up soft-ends@palm-wide-and-up soft-half-ends push-bottom"
    >
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={0}
      />
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={1}
      />
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={2}
      />
    </div>
  </div>
</section>
`;

exports[`renders without album artist 1`] = `
<section
  className="hard background--light-primary"
  style={Object {}}
>
  <Meta
    description="Album by NewSpring"
    image="url(http://test.com/medium.blur.jpg)"
  />
  <div
    className="one-whole soft soft-double@palm-wide-and-up overlay floating background--dark-primary background--fill"
    style={
      Object {
        "backgroundImage": "url(http://test.com/xsmall.blur.jpg)",
      }
    }
  >
    <div
      className="one-third floating__item display-inline overlay__item ratio--square background--fill"
      style={
        Object {
          "backgroundImage": "url(http://test.com/medium.blur.jpg)",
        }
      }
    />
    <div
      className="overlay__item soft-left text-left floating__item two-thirds text-light-primary"
    >
      <h5 />
      <h7>
        NewSpring
      </h7>
    </div>
  </div>
  <div
    className="background--light-primary one-whole"
  >
    <div
      className="soft-sides soft-double-sides@palm-wide-and-up soft-ends@palm-wide-and-up soft-half-ends push-bottom"
    >
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={0}
      />
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={1}
      />
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={2}
      />
    </div>
  </div>
</section>
`;

exports[`test adjust style if modal visible 1`] = `
<section
  className="hard background--light-primary"
  style={
    Object {
      "WebkitFilter": "blur(2px)",
    }
  }>
  <Meta
    description="Album by artist"
    image="url(http://test.com/medium.blur.jpg)" />
  <div
    className="one-whole soft soft-double@palm-wide-and-up overlay floating background--dark-primary background--fill"
    style={
      Object {
        "backgroundImage": "url(http://test.com/xsmall.blur.jpg)",
      }
    }>
    <div
      className="one-third floating__item display-inline overlay__item ratio--square background--fill"
      style={
        Object {
          "backgroundImage": "url(http://test.com/medium.blur.jpg)",
        }
      } />
    <div
      className="overlay__item soft-left text-left floating__item two-thirds text-light-primary">
      <h5 />
      <h7>
        artist
      </h7>
    </div>
  </div>
  <div
    className="background--light-primary one-whole">
    <div
      className="soft-sides soft-double-sides@palm-wide-and-up soft-ends@palm-wide-and-up soft-half-ends push-bottom">
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={0} />
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={1} />
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={2} />
    </div>
  </div>
</section>
`;

exports[`test parses query correctly 1`] = `
Object {
  "definitions": Array [
    Object {
      "directives": Array [],
      "kind": "OperationDefinition",
      "name": Object {
        "kind": "Name",
        "value": "getAlbum",
      },
      "operation": "query",
      "selectionSet": Object {
        "kind": "SelectionSet",
        "selections": Array [
          Object {
            "alias": Object {
              "kind": "Name",
              "value": "content",
            },
            "arguments": Array [
              Object {
                "kind": "Argument",
                "name": Object {
                  "kind": "Name",
                  "value": "id",
                },
                "value": Object {
                  "kind": "Variable",
                  "name": Object {
                    "kind": "Name",
                    "value": "id",
                  },
                },
              },
            ],
            "directives": Array [],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "node",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "id",
                  },
                  "selectionSet": null,
                },
                Object {
                  "directives": Array [],
                  "kind": "InlineFragment",
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "alias": Object {
                          "kind": "Name",
                          "value": "entryId",
                        },
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "id",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "title",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "status",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "channelName",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "meta",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "urlTitle",
                              },
                              "selectionSet": null,
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "siteId",
                              },
                              "selectionSet": null,
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "date",
                              },
                              "selectionSet": null,
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "channelId",
                              },
                              "selectionSet": null,
                            },
                          ],
                        },
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "content",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "tracks",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "title",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "duration",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": Object {
                                      "kind": "Name",
                                      "value": "file",
                                    },
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "s3",
                                    },
                                    "selectionSet": null,
                                  },
                                ],
                              },
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [
                                Object {
                                  "kind": "Argument",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "sizes",
                                  },
                                  "value": Object {
                                    "kind": "ListValue",
                                    "values": Array [
                                      Object {
                                        "kind": "StringValue",
                                        "value": "large",
                                      },
                                      Object {
                                        "kind": "StringValue",
                                        "value": "medium",
                                      },
                                      Object {
                                        "kind": "StringValue",
                                        "value": "small",
                                      },
                                      Object {
                                        "kind": "StringValue",
                                        "value": "xsmall",
                                      },
                                    ],
                                  },
                                },
                              ],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "images",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "fileName",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "fileType",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "fileLabel",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "size",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "url",
                                    },
                                    "selectionSet": null,
                                  },
                                ],
                              },
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "colors",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "value",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "description",
                                    },
                                    "selectionSet": null,
                                  },
                                ],
                              },
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "isLight",
                              },
                              "selectionSet": null,
                            },
                          ],
                        },
                      },
                    ],
                  },
                  "typeCondition": Object {
                    "kind": "NamedType",
                    "name": Object {
                      "kind": "Name",
                      "value": "Content",
                    },
                  },
                },
              ],
            },
          },
        ],
      },
      "variableDefinitions": Array [
        Object {
          "defaultValue": null,
          "kind": "VariableDefinition",
          "type": Object {
            "kind": "NonNullType",
            "type": Object {
              "kind": "NamedType",
              "name": Object {
                "kind": "Name",
                "value": "ID",
              },
            },
          },
          "variable": Object {
            "kind": "Variable",
            "name": Object {
              "kind": "Name",
              "value": "id",
            },
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 659,
    "source": Source {
      "body": "
  query getAlbum($id: ID!) {
    content: node(id: $id) {
      id
      ... on Content {
        entryId: id
        title
        status
        channelName
        meta {
          urlTitle
          siteId
          date
          channelId
        }
        content {
          tracks {
            title
            duration
            file: s3
          }
          images(sizes: ["large", "medium", "small", "xsmall"]) {
            fileName
            fileType
            fileLabel
            size
            url
          }
          colors {
            value
            description
          }
          isLight
        }
      }
    }
  }
",
      "name": "GraphQL",
    },
    "start": 3,
  },
}
`;

exports[`test renders loading if not content 1`] = `
<div
  className="locked-ends locked-sides floating">
  <div
    className="floating__item">
    <Loading />
  </div>
</div>
`;

exports[`test renders with props 1`] = `
<section
  className="hard background--light-primary"
  style={Object {}}>
  <Meta
    description="Album by artist"
    image="url(http://test.com/medium.blur.jpg)" />
  <div
    className="one-whole soft soft-double@palm-wide-and-up overlay floating background--dark-primary background--fill"
    style={
      Object {
        "backgroundImage": "url(http://test.com/xsmall.blur.jpg)",
      }
    }>
    <div
      className="one-third floating__item display-inline overlay__item ratio--square background--fill"
      style={
        Object {
          "backgroundImage": "url(http://test.com/medium.blur.jpg)",
        }
      } />
    <div
      className="overlay__item soft-left text-left floating__item two-thirds text-light-primary">
      <h5 />
      <h7>
        artist
      </h7>
    </div>
  </div>
  <div
    className="background--light-primary one-whole">
    <div
      className="soft-sides soft-double-sides@palm-wide-and-up soft-ends@palm-wide-and-up soft-half-ends push-bottom">
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={0} />
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={1} />
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={2} />
    </div>
  </div>
</section>
`;

exports[`test renders without album artist 1`] = `
<section
  className="hard background--light-primary"
  style={Object {}}>
  <Meta
    description="Album by NewSpring"
    image="url(http://test.com/medium.blur.jpg)" />
  <div
    className="one-whole soft soft-double@palm-wide-and-up overlay floating background--dark-primary background--fill"
    style={
      Object {
        "backgroundImage": "url(http://test.com/xsmall.blur.jpg)",
      }
    }>
    <div
      className="one-third floating__item display-inline overlay__item ratio--square background--fill"
      style={
        Object {
          "backgroundImage": "url(http://test.com/medium.blur.jpg)",
        }
      } />
    <div
      className="overlay__item soft-left text-left floating__item two-thirds text-light-primary">
      <h5 />
      <h7>
        NewSpring
      </h7>
    </div>
  </div>
  <div
    className="background--light-primary one-whole">
    <div
      className="soft-sides soft-double-sides@palm-wide-and-up soft-ends@palm-wide-and-up soft-half-ends push-bottom">
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={0} />
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={1} />
      <Connect(AudioTrackWithoutData)
        album={
          Object {
            "content": Object {
              "id": "1",
              "images": Array [
                Object {
                  "fileName": "blur",
                  "size": "xsmall",
                  "url": "http://test.com/xsmall.blur.jpg",
                },
                Object {
                  "fileName": "normal",
                  "size": "medium",
                  "url": "http://test.com/medium.blur.jpg",
                },
              ],
              "title": "sweet jams",
              "tracks": Array [
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
                Object {
                  "file": "http://test.com/test.mp3",
                },
              ],
            },
          }
        }
        track={
          Object {
            "file": "http://test.com/test.mp3",
          }
        }
        trackNumber={2} />
    </div>
  </div>
</section>
`;
